--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "eslint ./ && jest",
-    "lint": "eslint ./"
+    "lint": "eslint ./",
+    "lint-fix": "eslint ./ --fix"
   },
   "keywords": [
     "continuation-local-storage",
@@ -27,7 +28,8 @@
   },
   "devDependencies": {
     "eslint": "^6.1.0",
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "eslint-plugin-jest": "^22.15.1"
   },
   "repository": {
     "type": "git",
